--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Trabajo_Practico_Final_G2
+application.vendor=long_
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,9 +27,10 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Trabajo_Practico_Final_G2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.jcalendar-1.4.jar=..\\..\\jcalendar-1.4.jar
-file.reference.mariadb-java-client-2.3.0_3.jar=..\\..\\mariadb-java-client-2.3.0_3.jar
+file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
+file.reference.mariadb-java-client-2.3.0_3.jar=mariadb-java-client-2.3.0_3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
